agora esta executar 100% falta norminete

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
     "files.associations": {
-        "cstdlib": "c",
-        "get_next_line.h": "c"
-    }
+		"cstdlib": "c",
+		"get_next_line.h": "c",
+		"unistd.h": "c"
+	}
 }
